Changelog
=========


2.0.1 (unreleased)
------------------

- Nothing changed yet.


2.0 (2011-11-17)
----------------

- Final release
  [phgross]


2.0b12 (2011-10-13)
-------------------

- Replace german string with correct translations, in the send_document fucionality.
  [phgross]

- Rebuilding send_document fucionality. Implements mail transfers also for mails.
  Issue #1238 Fehler im DocumentSizeValidator im opengever.mail
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1238/
  [phgross]

- Fixed extract_attachment method, remove line breaks from the attachment filenames.
  Issue #1236 Probleme im inbound mail.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1236
  [phgross]


2.0b11 (2011-10-04)
-------------------

- Removed mail_settings Importstep it isnt needed anymore
  #1204 Absender E-Mail Addresse anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1204
  [ttschanz]

- fixed sortable_author indexer for mails:
  return now the returned value of the document_author method not just the indexerobject.
  Issue #1215 Dokumentenauflistung: sortieren nach Autor dropt Mails
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1215/view
  [phgross]

- Added fallback for the sortable_author indexer, when no author is given. It should return a
  empty string instead of None, because that's not sortable
  [phgross]


2.0b10 (2011-09-29)
-------------------

- Fixed UnicodeError that happened when mail FROM contained non-ASCII characters
  [lgraf]

- Tests: check now if the Message is in the Mail
  [ttschanz]

- Removed GS profile dep on CMFEditions default profile because it causes
  policymaps to be purged
  [lgraf]

- changed deprecated grok.CodeView to grok.View
  [eschmutz]

- Set versioning policy for ftw.mail.mail to "Manual", because "Automatic"
  causes bogus versions to be created during migration.
  [lgraf]
